welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:5: error: ';' expected but 'else' found.
		else {
                ^